--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <body id="home">
     <header>
       <div class="logo-container">
-        <img src="" alt="TaBleau Blanc's logo" />
+        <img src="assets/pictures/logo.png" alt="TaBleau Blanc's logo" />
       </div>
       <nav>
         <ul>
@@ -50,54 +50,60 @@
     <main>
       <article class="hero">
         <div class="hero-container">
-          <h1>TaBleau Blanc</h1>
+          <h1><span>T</span>a<span>B</span>leau <span>B</span>lanc</h1>
           <p>
             If you're missing a whiteboard, look no further: we've got the
             perfect space to shape and bring all your ideas to life!
           </p>
-          <button class="btn">Add to cart</button>
+          <button class="btn btn-large">Add to cart</button>
         </div>
         <div class="hero-img-container">
-          <img src="" alt="Tableau blanc" />
+          <img src="assets/pictures/whiteboard.png" alt="Tableau blanc" />
         </div>
       </article>
-      <article>
+      <article class="extra-products">
         <h2>Creative Kit</h2>
         <div class="cards">
           <article class="card">
             <div class="card-img-container">
-              <img src="" alt="Black whiteboard marker" />
+              <img
+                src="assets/pictures/black-marker.jpeg"
+                alt="Black whiteboard marker"
+              />
             </div>
             <div class="card-content">
               <div class="card-info">
                 <h3>Black marker</h3>
                 <p class="price">999€</p>
               </div>
-              <button class="btn">Add to cart</button>
+              <button class="btn btn-small">Add to cart</button>
             </div>
           </article>
           <article class="card">
             <div class="card-img-container">
-              <img src="" alt="Red whiteboard marker" />
+              <img
+                src="assets/pictures/orange-marker.jpg"
+                alt="Orange whiteboard marker"
+              />
             </div>
             <div class="card-content">
               <div class="card-info">
                 <h3>Red marker</h3>
                 <p class="price">999€</p>
               </div>
-              <button class="btn">Add to cart</button>
+              <button class="btn btn-small">Add to cart</button>
             </div>
           </article>
           <article class="card">
             <div class="card-img-container">
-              <img src="" alt="Whiteboard eraser" />
+              <img src="assets/pictures/eraser.jpg" alt="Whiteboard eraser" />
             </div>
             <div class="card-content">
               <div class="card-info">
                 <h3>Eraser</h3>
                 <p class="price">1€</p>
               </div>
-              <button class="btn">Add to cart</button>
+              <button class="btn btn-small">Add to cart</button>
             </div>
           </article>
         </div>
@@ -105,7 +111,8 @@
     </main>
     <footer>
       <div class="footer-container">
-        <p>&copy; 2021 TaBleau Blanc</p>
+        <p>&copy; 2025 - <span>T</span>a<span>B</span>leau <span>B</span>lanc</h1>
+        </p>
         <ul class="socials">
           <li>
             <a href="https://fr-fr.facebook.com/" target="_blank"
